k8s/ghost/ghost.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ghost
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ghost
  template:
    metadata:
      labels:
        app: ghost
    spec:
      nodeName: system
      containers:
        - name: ghost
          image: omegazyadav/ghost:200914-91fcc374
          ports:
            - containerPort: 2368
          resources:
            requests:
              memory: "500Mi"
              cpu: "500m"
            limits:
              memory: "1024Mi"
              cpu: "600m"
          volumeMounts:
            - name: ghost-storage
              mountPath: "/var/lib/ghost/content"
      volumes:
        - name: ghost-volume
          configMap:
            name: db-config
            defaultMode: 0777
        - name: ghost-storage
          persistentVolumeClaim:
            claimName: ghost-pvc-claim

---

apiVersion: v1
kind: Service
metadata:
  name: ghost-svc
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      targetPort: 2368
      protocol: TCP 
  selector:
    app: ghost
