k8s/ghost/jenkins.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins-deployment
  labels:
    app: jenkins
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jenkins
  template:
    metadata:
      labels:
        app: jenkins
    spec:
      containers:
      - name: jenkins
        image: jenkins:latest
        ports:
        - containerPort: 8080
        volumeMounts:
          - name: jenkins-volume
            mountPath: /opt/jenkins
      volumes:
        - name: jenkins-volume
          persistentVolumeClaim:
            claimName: jenkins-pv
---
apiVersion: v1
kind: Service
metadata:
  name: jenkins-service
spec:
  selector:
    app: jenkins
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      nodePort: 30081
  type: NodePort
