k8s/ghost/mysql.yml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: mysql
  labels:
    app: mysql
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      nodeName: system 
      containers:
        - name: mysql
          image: mysql:8.0.21
          livenessProbe:
            exec:
              command:
              - bash
              - "-c"
              - |
                set -ex
                mysqladmin -p${MYSQL_ROOT_PASSWORD} ping &> /dev/null
            initialDelaySeconds: 15
            periodSeconds: 10
          readinessProbe:
            exec:
              command:
              - bash
              - "-c"
              - |
                set ex
                mysql  -h 127.0.0.1 -u${MYSQL_USERNAME} -p${MYSQL_ROOT_PASSWORD} -e "SELECT 1" &> /dev/null
            initialDelaySeconds: 15
            periodSeconds: 10
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: config
              mountPath: /script/script.sh
              subPath: script.sh 
            - name: mysql-storage
              mountPath: "/opt/ghost/ghost_mysql"
      volumes:
        - name: config
          configMap:
            name: db-config   
            defaultMode: 0777
        - name: mysql-storage
          persistentVolumeClaim:
            claimName: mysql-pvc-claim

---

apiVersion: v1
kind: Service
metadata:
  name: db
spec:
  type: ClusterIP
  ports:
  - port: 3306
    targetPort: 3306
  selector:
    app: mysql
